src/test/deca/avecObjet/valid/method_returns_in_all_paths_ok.deca
// Description :
//    Retour présent dans tous les chemins d'exécution d'une méthode.
//
// Resultats :
//    Affiche : 1

class A {
    int f(boolean b) {
        if (b) {
            return 1;
        } else {
            return 2;
        }
    }
}

{
    A a = new A();
    println(a.f(true));
}

